add some touches

--- a/Unemployment_Crime.ipynb
+++ b/Unemployment_Crime.ipynb
@@ -1770,23 +1770,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 37,
       "id": "8db18ef1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8db18ef1",
-        "outputId": "1efe8a6c-2239-480e-8623-2a93f8590b5e"
+        "outputId": "41f60a7f-f456-4fdc-8b8e-fd84242b3b60"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Violent Crime T-test: t = 5.8177, p = 0.00000000812826252859\n",
-            "Property Crime T-test: t = 9.7012, p = 0.00000000000000000000\n",
-            "Crime Rate T-test: t = 9.6411, p = 0.00000000000000000000\n"
+            "Violent Crime T-test: t = 5.8177, p-value = 0.00000000813\n",
+            "Property Crime T-test: t = 9.7012, p-value = 0.0000000000000000000027\n",
+            "Crime Rate T-test: t = 9.6411, p-value = 0.0000000000000000000047\n"
           ]
         }
       ],
@@ -1797,9 +1797,9 @@
         "t_stat_v, p_val_v, _ = ttest_ind(high['violent_total'], low['violent_total'])\n",
         "t_stat_p, p_val_p, _ = ttest_ind(high['property_total'], low['property_total'])\n",
         "t_stat_c, p_val_c, _ = ttest_ind(high['total_crime'], low['total_crime'])\n",
-        "print(f\"Violent Crime T-test: t = {t_stat_v:.4f}, p = {p_val_v:.20f}\")\n",
-        "print(f\"Property Crime T-test: t = {t_stat_p:.4f}, p = {p_val_p:.20f}\")\n",
-        "print(f\"Crime Rate T-test: t = {t_stat_c:.4f}, p = {p_val_c:.20f}\")"
+        "print(f\"Violent Crime T-test: t = {t_stat_v:.4f}, p-value = {p_val_v:.11f}\")\n",
+        "print(f\"Property Crime T-test: t = {t_stat_p:.4f}, p-value = {p_val_p:.22f}\")\n",
+        "print(f\"Crime Rate T-test: t = {t_stat_c:.4f}, p-value = {p_val_c:.22f}\")"
       ]
     },
     {
