--- a/Unemployment_Crime.ipynb
+++ b/Unemployment_Crime.ipynb
@@ -2037,10 +2037,10 @@
           "height": 379
         },
         "id": "lsPVKnEQnBec",
-        "outputId": "5ce9db53-7aca-421d-f57b-49718b31b98b"
+        "outputId": "0d0ef793-a1e9-49c2-b434-302518b755bb"
       },
       "id": "lsPVKnEQnBec",
-      "execution_count": 87,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2262,14 +2262,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 98,
       "id": "8db18ef1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8db18ef1",
-        "outputId": "7707a2e2-3ce1-467e-96a9-6f05396bfbe2"
+        "outputId": "33719d0b-3e95-4cac-8f71-57f012b31821"
       },
       "outputs": [
         {
@@ -2279,6 +2279,8 @@
             "Violent Crime Z-test: z = 4.0684, p-value = 0.00004734715\n",
             "Property Crime Z-test: z = 9.1072, p-value = 0.00000000000000000008450\n",
             "Crime Rate Z-test: z = 8.9179, p-value = 0.00000000000000000047517\n",
+            "\n",
+            "\n",
             "Violent Crime Z-test Interpretation:\n",
             "The p-value (0.00004734715) is less than the significance level (0.05).\n",
             "We reject the null hypothesis.\n",
@@ -2310,6 +2312,7 @@
         "print(f\"Property Crime Z-test: z = {z_stat_p:.4f}, p-value = {p_val_z_p:.23f}\")\n",
         "print(f\"Crime Rate Z-test: z = {z_stat_c:.4f}, p-value = {p_val_z_c:.23f}\")\n",
         "\n",
+        "print(\"\\n\")\n",
         "alpha = 0.05\n",
         "\n",
         "# Interpret the Violent Crime Z-test\n",
